--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
   }
   stages {
     stage ('Initialize') {
-    step {
+    steps {
         sh '''
               echo "PATH = ${PATH}"
               echo "M2_HOME = ${M2_HOME}"
